--- a/exerciseTracker/client/homePage.css
+++ b/exerciseTracker/client/homePage.css
@@ -33,5 +33,34 @@ body, html{
 .createUserContainer, .addExerciseContainer{
     height: 300px;
     width: 100%;
-    background-color: red; 
+    background-color: lightgreen;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+code{
+    font-size: 20px;
+    background-color: lightyellow;
+}
+
+input{
+    display: block;
+    margin-bottom: 10px;
+    padding: 5px;
+    width: 100%;
+    border: 1px solid lightgrey;
+    border-radius: 3px;
+    font-size: 16px;
+}
+
+input[type=submit]{
+    font-size: 16px;
+    border-radius: 3px;
+    background-color: #E4F1FE;
+    border: 1px solid grey;
+    box-shadow: 2px 2px #999;
+    cursor: pointer;
+    margin-left: 7px;
 }
