--- a/exerciseTracker/client/homePage.ejs
+++ b/exerciseTracker/client/homePage.ejs
@@ -23,10 +23,10 @@
                     <h3>Add Exercises</h3>
                     <p><code>POST /api/exercise/add</code></p>
                     <form action="http://localhost:3000/api/exercise/add" method="POST">
-                        <input type="text" name="userId" placeholder="userId*"/>
-                        <input type="text" name="desc" placeholder="description*"/>
-                        <input type="text" name="duration" placeholder="duration* (mins.)"/>
-                        <input type="text" name="date" placeholder="date (yyyy-mm-dd)"/>
+                        <input type="text" name="userId" placeholder="userId*"/ required>
+                        <input type="text" name="desc" placeholder="description*"/ required>
+                        <input type="number" min="0" name="duration" placeholder="duration* (mins.)"/ required>
+                        <input type="date" name="date" placeholder="date (yyyy-mm-dd)"/>
                         <input type="submit" name="submit"/>
                     </form>
                 </div>
