--- a/exerciseTracker/client/homePage.css
+++ b/exerciseTracker/client/homePage.css
@@ -38,6 +38,9 @@ body, html{
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    padding: 30px;
+    margin: 30px;
+    border-radius: 30px;
 }
 
 code{
