--- a/exerciseTracker/client/homePage.ejs
+++ b/exerciseTracker/client/homePage.ejs
@@ -23,7 +23,7 @@
                     <h3>Add Exercises</h3>
                     <p><code>POST /api/exercise/add</code></p>
                     <form action="http://localhost:3000/api/exercise/add" method="POST">
-                        <input type="text" name="userId" placeholder="userId*"/ required>
+                        <input type="text" name="userID" placeholder="userID*"/ required>
                         <input type="text" name="desc" placeholder="description*"/ required>
                         <input type="number" min="0" name="duration" placeholder="duration* (mins.)"/ required>
                         <input type="date" name="date" placeholder="date (yyyy-mm-dd)"/>
@@ -33,7 +33,7 @@
             </div>  
         </div>
         <div class="footer">
-            <p><strong>GET users's exercise log: </strong><code>GET /api/exercise/log?{userId}[&amp;from][&amp;to][&amp;limit]</code></p>
+            <p><strong>GET users's exercise log: </strong><code>GET /api/exercise/log/{userID}?from=[dateFrom]&to=[dateTo]&limit=[limit]</code></p>
             <p><strong>{ }</strong> = required, <strong>[ ]</strong> = optional</p>
             <p><strong>from, to</strong> = dates (yyyy-mm-dd); <strong>limit</strong> = number</p>
         </div>
