--- a/urlShortener/client/index.ejs
+++ b/urlShortener/client/index.ejs
@@ -1,15 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>User Form Page</title>
+    <title>URL Shortener</title>
 </head>
-
-    <body>
-        <h2>Enter URL you need to shorten:</h2>
-        <form action="http://localhost:3000/api/shorturl/new" method="POST">
-            URL: <input type="text" name="url"/><br/>
-            <input type="submit" name="submit"/>
-        </form>
-        <%=typeof alert!='undefined'? alert : ""%>
-    </body>
+<style>
+body{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100vw;
+    align-items: center;
+    height: 100vh;
+    background-color: beige;
+    font-family: sans-serif;
+}
+h2{
+    color: crimson;
+    font-size: 40px;
+}
+form{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+input{
+    display: block;
+    margin-bottom: 10px;
+    padding: 5px;
+    border: 1px solid lightgrey;
+    border-radius: 3px;
+    font-size: 16px;
+    width: 200px;
+}
+input[type=submit]{
+    font-size: 16px;
+    border-radius: 3px;
+    background-color: #E4F1FE;
+    border: 1px solid grey;
+    box-shadow: 2px 2px #999;
+    cursor: pointer;
+}
+</style>
+<body>
+    <h2>Enter URL you need to shorten:</h2>
+    <form action="http://localhost:3000/api/shorturl/new" method="POST">
+        <input type="text" name="url"/><br/>
+        <input type="submit" name="submit"/>
+    </form>
+    <%=typeof alert!='undefined'? alert : ""%>
+</body>
 </html>
