--- a/web-server/templates/views/about.hbs
+++ b/web-server/templates/views/about.hbs
@@ -4,11 +4,11 @@
 
 <head>
     <link rel="stylesheet" href="/css/styles.css">
-    <script src="/js/app.js"></script>
 </head>
 
 <body>
-    <h1>{{title}}</h1>
+    <h1>{{>header}}</h1>
+    <img src="/img/me.jpg">
 </body>
 
 </html>
