--- a/web-server/templates/views/index.hbs
+++ b/web-server/templates/views/index.hbs
@@ -4,11 +4,11 @@
 
 <head>
     <link rel="stylesheet" href="/css/styles.css">
+    <script src="/js/app.js"></script>
 </head>
 
 <body>
-    <h1>About</h1>
-    <img src="/img/me.jpg">
+    <h1>{{>header}}</h1>
 </body>
 
 </html>
